# Prod_Order_Load

./: .gitignore  README.md  app.py  build.bat  config.py  consolidation.py  version_info.py
BOM_TOP_BOT_Match/: config_example.json  config_example_3files.json  match_bom_top_bot.py  pyproject.toml  requirements.txt
DigiKey_Manager_Pro/: main.py
Prod_Order_Load/: .gitignore  CreatedFolders.bas  README.md  app.py  config.py  consolidation.py  customer_name_norm.py  customer_name_sqlite_normalize.py  date_norm.py  field_change_strip.py  folder_create.py  migrate_strip_field_changes.py  order_spec_split.py  release_manager.py  sqlite_export.py  sqlite_query.py
Prod_Order_Load/release_tool/: __init__.py  cli.py  core.py
