[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-top-bot-match"
version = "1.3.0"
description = "BOM/TOP/BOT 엑셀 시트 매칭 — 자재별 BOM 수량 vs TOP+BOT 총수량 비교 및 불일치·중복 기록"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["bom", "excel", "matching", "top", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "openpyxl>=3.1.2",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
bom-top-bot-match = "match_bom_top_bot:main"

[tool.setuptools]
py-modules = ["match_bom_top_bot"]
